Correcciones menores
git-svn-id: http://svn-ctt.administracionelectronica.gob.es/svn/clienteafirma/project/afirma/trunk@4112 dcdbb401-323c-49cf-88a0-803402807c85